--- a/week2/andfun-kotlin-android-trivia-Step.11-Solution-Adding-Animation/app/src/main/res/values/dimens.xml
+++ b/week2/andfun-kotlin-android-trivia-Step.11-Solution-Adding-Animation/app/src/main/res/values/dimens.xml
@@ -18,6 +18,7 @@
 <resources>
     <dimen name="vertical_margin">16dp</dimen>
     <dimen name="horizontal_margin">8dp</dimen>
+    <dimen name="normal_padding">16dp</dimen>
     <dimen name="button_padding">16dp</dimen>
     <dimen name="button_text_size">18sp</dimen>
     <dimen name="question_horizontal_margin">32dp</dimen>
