--- a/week2/andfun-kotlin-android-trivia-Step.11-Solution-Adding-Animation/app/src/main/res/values/styles.xml
+++ b/week2/andfun-kotlin-android-trivia-Step.11-Solution-Adding-Animation/app/src/main/res/values/styles.xml
@@ -23,4 +23,14 @@
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
     </style>
+
+    <style name="profileSubStyle">
+        <item name="android:layout_marginTop">@dimen/vertical_margin</item>
+        <item name="android:textSize">@dimen/button_text_size</item>
+        <item name="android:background">@color/colorPrimaryDark</item>
+        <item name="android:textColor">@color/white</item>
+        <item name="fontFamily">@font/roboto_medium</item>
+        <item name="android:gravity">center_vertical</item>
+        <item name="android:textAlignment">center</item>
+    </style>
 </resources>
