--- a/week2/andfun-kotlin-android-trivia-Step.11-Solution-Adding-Animation/app/src/main/res/layout/fragment_profile.xml
+++ b/week2/andfun-kotlin-android-trivia-Step.11-Solution-Adding-Animation/app/src/main/res/layout/fragment_profile.xml
@@ -14,6 +14,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="4dp"
+        android:fontFamily="@font/roboto_medium"
         android:text="@string/name"
         android:textAlignment="center"
         app:layout_constraintEnd_toStartOf="@+id/nickname"
