--- a/week2/andfun-kotlin-android-trivia-Step.11-Solution-Adding-Animation/app/src/main/res/layout/fragment_profile.xml
+++ b/week2/andfun-kotlin-android-trivia-Step.11-Solution-Adding-Animation/app/src/main/res/layout/fragment_profile.xml
@@ -55,6 +55,7 @@
         android:layout_height="wrap_content"
         android:text="@string/tzu_hsien_yeh"
         android:textAlignment="center"
+        android:textSize="20sp"
         app:layout_constraintBaseline_toBaselineOf="@+id/mynickname"
         app:layout_constraintEnd_toEndOf="@+id/Name"
         app:layout_constraintStart_toStartOf="@+id/Name" />
@@ -65,6 +66,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
         android:text="@string/oo"
+        android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="@+id/nickname"
         app:layout_constraintStart_toStartOf="@+id/nickname"
         app:layout_constraintTop_toBottomOf="@+id/nickname" />
@@ -73,12 +75,13 @@
         android:id="@+id/aboutme_content"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:lineSpacingExtra="8dp"
         android:text="@string/bio_text"
-        android:textSize="@dimen/answer_text_size"
+        android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="@id/aboutme"
         app:layout_constraintStart_toStartOf="@+id/aboutme"
-        app:layout_constraintTop_toBottomOf="@+id/aboutme"
-        android:lineSpacingExtra="6dp"/>
+        app:layout_constraintTop_toBottomOf="@+id/aboutme" />
 
     <ImageView
         android:id="@+id/imageView"
