--- a/week3/andfun-kotlin-sleep-tracker-Step.07-Solution-Add-Button-States-and-SnackBar/app/src/main/res/layout/fragment_sleep_quality.xml
+++ b/week3/andfun-kotlin-sleep-tracker-Step.07-Solution-Add-Button-States-and-SnackBar/app/src/main/res/layout/fragment_sleep_quality.xml
@@ -126,5 +126,17 @@
             app:layout_constraintTop_toTopOf="@+id/quality_four_image"
             app:srcCompat="@drawable/ic_sleep_5" />
 
+        <EditText
+            android:id="@+id/info_input"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:hint="Please enter any information for this night."
+            android:text="@={sleepQualityViewModel.inputInfo}"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/quality_four_image"
+            tools:ignore="TouchTargetSizeCheck" />
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
